Updated <GlobalVar: None a134m; @8200 len=8>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,11 +4,11 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x2018]
-last_change = 2023-12-10T08:13:36.788745Z
-addr = 0x2018
-name = "aSSS"
-size = 0x9
+[0x2008]
+last_change = 2023-12-10T08:13:36.799834Z
+addr = 0x2008
+name = "a134m"
+size = 0x8
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
