--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,11 +4,11 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x2037]
-last_change = 2023-12-10T08:13:36.766254Z
-addr = 0x2037
-name = "a136m"
-size = 0x8
+[0x6e0]
+last_change = 2023-12-10T08:13:36.777538Z
+addr = 0x6e0
+name = "aIsoc99Scanf"
+size = 0xf
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
