--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:36.766254Z
-last_push_artifact = 0x2037
+last_push_time = 2023-12-10T08:13:36.777538Z
+last_push_artifact = 0x6e0
 last_push_artifact_type = "global variable"
