--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,11 +4,11 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x6e0]
-last_change = 2023-12-10T08:13:36.777538Z
-addr = 0x6e0
-name = "aIsoc99Scanf"
-size = 0xf
+[0x2018]
+last_change = 2023-12-10T08:13:36.788745Z
+addr = 0x2018
+name = "aSSS"
+size = 0x9
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
