Updated <GlobalVar: None aStdout; @1737 len=7>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,11 +4,11 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x3ff8]
-last_change = 2023-12-10T08:13:36.811566Z
-addr = 0x3ff8
-name = "__cxa_finalize_ptr"
-size = 0x8
+[0x6c9]
+last_change = 2023-12-10T08:13:36.822776Z
+addr = 0x6c9
+name = "aStdout"
+size = 0x7
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
