Updated <GlobalVar: None format; @8216 len=9>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,11 +4,11 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x73d]
-last_change = 2023-12-10T08:13:31.134506Z
-addr = 0x73d
-name = "aGlibc234"
-size = 0xb
+[0x2018]
+last_change = 2023-12-10T08:13:36.592454Z
+addr = 0x2018
+name = "format"
+size = 0x9
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
