--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:31.134506Z
-last_push_artifact = 0x73d
+last_push_time = 2023-12-10T08:13:36.592454Z
+last_push_artifact = 0x2018
 last_push_artifact_type = "global variable"
