--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,14 +1,14 @@
+[0x398]
+last_change = 2023-12-10T08:13:36.951006Z
+addr = 0x398
+name = "aGnu_1"
+size = 0x4
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
 name = "aFclose"
 size = 0x7
-
-[0x1ac0]
-last_change = 2023-12-10T08:13:36.939268Z
-addr = 0x1ac0
-name = ".term_proc"
-size = 0x1
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
