--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:36.939268Z
-last_push_artifact = 0x1ac0
+last_push_time = 2023-12-10T08:13:36.951006Z
+last_push_artifact = 0x398
 last_push_artifact_type = "global variable"
