--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:37.220570Z
-last_push_artifact = 0x75d
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-10T08:13:37.232673Z
+last_push_artifact = 0x1412
+last_push_artifact_type = "function"
