--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,11 +4,11 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x24c2]
-last_change = 2023-12-10T08:13:37.331669Z
-addr = 0x24c2
-name = "aZombienatorSTi"
-size = 0x16
+[0x203f]
+last_change = 2023-12-10T08:13:37.343439Z
+addr = 0x203f
+name = "a132m"
+size = 0x8
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
