Updated <GlobalVar: None s; @8200 len=8>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:37.853047Z
-last_push_artifact = 0x3bc
+last_push_time = 2023-12-10T08:13:37.865138Z
+last_push_artifact = 0x2008
 last_push_artifact_type = "global variable"
