--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,14 +1,14 @@
-[0x3bc]
-last_change = 2023-12-10T08:13:37.853047Z
-addr = 0x3bc
-name = "elf_gnu_hash_shift"
-size = 0x4
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
 name = "aFclose"
 size = 0x7
+
+[0x2008]
+last_change = 2023-12-10T08:13:37.865138Z
+addr = 0x2008
+name = "s"
+size = 0x8
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
