Updated <GlobalVar: None elf_gnu_hash_indexes; @960 len=8>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,14 +1,14 @@
+[0x3c0]
+last_change = 2023-12-10T08:13:37.319236Z
+addr = 0x3c0
+name = "elf_gnu_hash_indexes"
+size = 0x8
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
 name = "aFclose"
 size = 0x7
-
-[0x25d1]
-last_change = 2023-12-10T08:13:37.307359Z
-addr = 0x25d1
-name = "aSlotDEmpty"
-size = 0x12
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
