--- a/structs/Elf64_Vernaux.toml
+++ b/structs/Elf64_Vernaux.toml
@@ -1,7 +1,7 @@
 [metadata]
 name = "Elf64_Vernaux"
-size = 0x10
-last_change = 2023-12-10T08:13:37.453528Z
+size = 0x8
+last_change = 2023-12-10T08:13:37.465352Z
 
 [members.0x0]
 name = "vna_hash"
@@ -12,23 +12,5 @@ size = 0x4
 [members.0x4]
 name = "vna_flags"
 offset = 0x4
-type = "unsigned short"
+type = ""
 size = 0x2
-
-[members.0x6]
-name = "vna_other"
-offset = 0x6
-type = "unsigned short"
-size = 0x2
-
-[members.0x8]
-name = "vna_name"
-offset = 0x8
-type = "unsigned int"
-size = 0x4
-
-[members.0xc]
-name = "vna_next"
-offset = 0xc
-type = "unsigned int"
-size = 0x4
