--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,6 +4,12 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
+[0x3f40]
+last_change = 2023-12-10T08:13:37.793696Z
+addr = 0x3f40
+name = ""
+size = 0x8
+
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
