--- a/structs/Elf64_Sym.toml
+++ b/structs/Elf64_Sym.toml
@@ -1,7 +1,7 @@
 [metadata]
 name = "Elf64_Sym"
-size = 0x18
-last_change = 2023-12-10T08:13:37.162808Z
+size = 0x10
+last_change = 2023-12-10T08:13:37.173994Z
 
 [members.0x0]
 name = "st_name"
@@ -30,11 +30,5 @@ size = 0x2
 [members.0x8]
 name = "st_value"
 offset = 0x8
-type = "unsigned long"
-size = 0x8
-
-[members.0x10]
-name = "st_size"
-offset = 0x10
-type = "unsigned long"
+type = ""
 size = 0x8
