--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:37.817131Z
-last_push_artifact = 0x3ff0
+last_push_time = 2023-12-10T08:13:37.829301Z
+last_push_artifact = 0x3f70
 last_push_artifact_type = "global variable"
