--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:37.257031Z
-last_push_artifact = 0x2058
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-10T08:13:37.269617Z
+last_push_artifact = 0x1140
+last_push_artifact_type = "function"
