--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,14 +1,14 @@
-[0x671]
-last_change = 2023-12-10T08:13:37.090387Z
-addr = 0x671
-name = "aCxaFinalize"
-size = 0xf
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
 name = "aFclose"
 size = 0x7
+
+[0x1180]
+last_change = 2023-12-10T08:13:37.101453Z
+addr = 0x1180
+name = ".fclose"
+size = 0x1
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
