--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,11 +4,11 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x3f40]
-last_change = 2023-12-10T08:13:37.793696Z
-addr = 0x3f40
-name = ""
-size = 0x8
+[0x2508]
+last_change = 2023-12-10T08:13:37.805115Z
+addr = 0x2508
+name = "aFrontLine04OrB"
+size = 0x27
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
