--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,11 +4,11 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x788]
-last_change = 2023-12-10T08:13:37.208786Z
-addr = 0x788
-name = "aItmRegistertmc"
-size = 0x1a
+[0x75d]
+last_change = 2023-12-10T08:13:37.220570Z
+addr = 0x75d
+name = "aItmDeregistert"
+size = 0x1c
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
