Updated <GlobalVar: None malloc_ptr; @16296 len=8>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:37.666940Z
-last_push_artifact = 0x3fe8
+last_push_time = 2023-12-10T08:13:37.679070Z
+last_push_artifact = 0x3fa8
 last_push_artifact_type = "global variable"
