--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:37.066851Z
-last_push_artifact = "Elf64_Dyn"
-last_push_artifact_type = "struct"
+last_push_time = 2023-12-10T08:13:37.079071Z
+last_push_artifact = 0x3c8
+last_push_artifact_type = "global variable"
