--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:37.691314Z
-last_push_artifact = 0x3f68
+last_push_time = 2023-12-10T08:13:37.704400Z
+last_push_artifact = 0x344
 last_push_artifact_type = "global variable"
