--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,11 +4,11 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x2021]
-last_change = 2023-12-10T08:13:37.355441Z
-addr = 0x2021
-name = "a2j"
-size = 0x5
+[0x2628]
+last_change = 2023-12-10T08:13:37.367434Z
+addr = 0x2628
+name = "a1Crea"
+size = 0xf9
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
