--- a/functions/0000148f.toml
+++ b/functions/0000148f.toml
@@ -1,4 +1,12 @@
 [metadata]
 addr = 0x148f
 size = 0x122
-last_change = 2023-12-10T08:13:37.592776Z
+last_change = 2023-12-10T08:13:37.606538Z
+
+[stack_vars.-0x48]
+last_change = 2023-12-10T08:13:37.606538Z
+offset = -72
+name = "v3"
+type = "char *[7]"
+size = 0x38
+addr = 0x148f
