--- a/structs/Elf64_Sym.toml
+++ b/structs/Elf64_Sym.toml
@@ -1,28 +1,6 @@
 [metadata]
 name = "Elf64_Sym"
-size = 0x8
-last_change = 2023-12-10T08:13:37.563470Z
+size = 0x0
+last_change = 2023-12-10T08:13:37.579841Z
 
-[members.0x0]
-name = "st_name"
-offset = 0x0
-type = "unsigned int"
-size = 0x4
-
-[members.0x4]
-name = "st_info"
-offset = 0x4
-type = "unsigned char"
-size = 0x1
-
-[members.0x5]
-name = "st_other"
-offset = 0x5
-type = "unsigned char"
-size = 0x1
-
-[members.0x6]
-name = "st_shndx"
-offset = 0x6
-type = ""
-size = 0x2
+[members]
