--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:37.295647Z
-last_push_artifact = 0x260c
+last_push_time = 2023-12-10T08:13:37.307359Z
+last_push_artifact = 0x25d1
 last_push_artifact_type = "global variable"
