Updated <GlobalVar: None elf_gnu_hash_nbuckets; @944 len=4>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,14 +1,14 @@
+[0x3b0]
+last_change = 2023-12-10T08:13:37.115188Z
+addr = 0x3b0
+name = "elf_gnu_hash_nbuckets"
+size = 0x4
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
 name = "aFclose"
 size = 0x7
-
-[0x1180]
-last_change = 2023-12-10T08:13:37.101453Z
-addr = 0x1180
-name = ".fclose"
-size = 0x1
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
