--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:37.899945Z
-last_push_artifact = 0x15b1
-last_push_artifact_type = "function"
+last_push_time = 2023-12-10T08:13:37.912710Z
+last_push_artifact = 0x2548
+last_push_artifact_type = "global variable"
