--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,11 +4,11 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x24d8]
-last_change = 2023-12-10T08:13:37.643780Z
-addr = 0x24d8
-name = "aCannotCreateZo"
-size = 0x2d
+[0x2026]
+last_change = 2023-12-10T08:13:37.655330Z
+addr = 0x2026
+name = "aDDh"
+size = 0x9
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
