--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:37.643780Z
-last_push_artifact = 0x24d8
+last_push_time = 2023-12-10T08:13:37.655330Z
+last_push_artifact = 0x2026
 last_push_artifact_type = "global variable"
