--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,11 +4,11 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x3f60]
-last_change = 2023-12-10T08:13:37.429076Z
-addr = 0x3f60
-name = "puts_ptr"
-size = 0x8
+[0x1000]
+last_change = 2023-12-10T08:13:37.441560Z
+addr = 0x1000
+name = ".init_proc"
+size = 0x1
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
