Updated <GlobalVar: None aSlotDS; @9699 len=15>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,14 +1,14 @@
-[0x318]
-last_change = 2023-12-10T08:13:37.619775Z
-addr = 0x318
-name = "aGlibcLdLinuxX8"
-size = 0x1d
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
 name = "aFclose"
 size = 0x7
+
+[0x25e3]
+last_change = 2023-12-10T08:13:37.631526Z
+addr = 0x25e3
+name = "aSlotDS"
+size = 0xf
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
