--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:37.619775Z
-last_push_artifact = 0x318
+last_push_time = 2023-12-10T08:13:37.631526Z
+last_push_artifact = 0x25e3
 last_push_artifact_type = "global variable"
