--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:37.525413Z
-last_push_artifact = 0x3b4
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-10T08:13:37.537536Z
+last_push_artifact = "Elf64_Rela"
+last_push_artifact_type = "struct"
