Updated <GlobalVar: None aGlibcLdLinuxX8; @792 len=29>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x318]
+last_change = 2023-12-10T08:13:37.619775Z
+addr = 0x318
+name = "aGlibcLdLinuxX8"
+size = 0x1d
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
