--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:37.343439Z
-last_push_artifact = 0x203f
+last_push_time = 2023-12-10T08:13:37.355441Z
+last_push_artifact = 0x2021
 last_push_artifact_type = "global variable"
