Updated <GlobalVar: None aGlibc27; @1628 len=10>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x65c]
+last_change = 2023-12-11T18:27:35.784511Z
+addr = 0x65c
+name = "aGlibc27"
+size = 0xa
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -9,12 +15,6 @@ last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
-
-[0x3530]
-last_change = 2023-12-11T18:27:35.768257Z
-addr = 0x3530
-name = "aSendYourPayloa"
-size = 0x26
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
