--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:35.768257Z
-last_push_artifact = 0x3530
+last_push_time = 2023-12-11T18:27:35.784511Z
+last_push_artifact = 0x65c
 last_push_artifact_type = "global variable"
