Updated <GlobalVar: None exit_ptr; @20424 len=8>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:35.699827Z
-last_push_artifact = 0x370e
+last_push_time = 2023-12-11T18:27:35.716228Z
+last_push_artifact = 0x4fc8
 last_push_artifact_type = "global variable"
