--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,14 +10,14 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
-[0x370e]
-last_change = 2023-12-11T18:27:35.699827Z
-addr = 0x370e
-name = "aWelcomeToS"
-size = 0x14
-
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
+
+[0x4fc8]
+last_change = 2023-12-11T18:27:35.716228Z
+addr = 0x4fc8
+name = "exit_ptr"
+size = 0x8
