--- a/global_vars.toml
+++ b/global_vars.toml
@@ -16,8 +16,8 @@ addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
 
-[0x5068]
-last_change = 2023-12-11T18:27:35.563344Z
-addr = 0x5068
-name = "_end"
+[0x5060]
+last_change = 2023-12-11T18:27:35.579511Z
+addr = 0x5060
+name = "sp_"
 size = 0x1
