--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x5f3]
+last_change = 2023-12-11T18:27:35.650558Z
+addr = 0x5f3
+name = "aAssertFail"
+size = 0xe
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -15,9 +21,3 @@ last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
-
-[0x4ff8]
-last_change = 2023-12-11T18:27:35.633561Z
-addr = 0x4ff8
-name = "__cxa_finalize_ptr"
-size = 0x8
