Updated <GlobalVar: None aWelcomeToS; @14094 len=20>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x62a]
-last_change = 2023-12-11T18:27:35.683929Z
-addr = 0x62a
-name = "aCxaFinalize"
-size = 0xf
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -15,6 +9,12 @@ last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
+
+[0x370e]
+last_change = 2023-12-11T18:27:35.699827Z
+addr = 0x370e
+name = "aWelcomeToS"
+size = 0x14
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
