--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:35.683929Z
-last_push_artifact = 0x62a
+last_push_time = 2023-12-11T18:27:35.699827Z
+last_push_artifact = 0x370e
 last_push_artifact_type = "global variable"
