--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,11 +10,11 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
-[0x3701]
-last_change = 2023-12-11T18:27:35.925310Z
-addr = 0x3701
-name = "assertion"
-size = 0x9
+[0x3008]
+last_change = 2023-12-11T18:27:35.939987Z
+addr = 0x3008
+name = "s"
+size = 0x53
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
