--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,14 +10,14 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
+[0x36c0]
+last_change = 2023-12-11T18:27:35.834313Z
+addr = 0x36c0
+name = "aTheAddressOfTh"
+size = 0x22
+
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
-
-[0x4f70]
-last_change = 2023-12-11T18:27:35.818893Z
-addr = 0x4f70
-name = ""
-size = 0x8
