--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:35.818893Z
-last_push_artifact = 0x4f70
+last_push_time = 2023-12-11T18:27:35.834313Z
+last_push_artifact = 0x36c0
 last_push_artifact_type = "global variable"
