--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:35.611746Z
-last_push_artifact = 0x50d8
+last_push_time = 2023-12-11T18:27:35.633561Z
+last_push_artifact = 0x4ff8
 last_push_artifact_type = "global variable"
