--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x318]
-last_change = 2023-12-11T18:27:35.802253Z
-addr = 0x318
-name = "aLib64LdLinuxX8"
-size = 0x1c
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -21,3 +15,9 @@ last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
+
+[0x4f70]
+last_change = 2023-12-11T18:27:35.818893Z
+addr = 0x4f70
+name = ""
+size = 0x8
