--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,11 +10,11 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
-[0x30a0]
-last_change = 2023-12-11T18:27:35.751627Z
-addr = 0x30a0
-name = "a0x016lxRsp0x04"
-size = 0x50
+[0x3530]
+last_change = 2023-12-11T18:27:35.768257Z
+addr = 0x3530
+name = "aSendYourPayloa"
+size = 0x26
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
