Updated <Function: @0x222d len=0x470>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:35.834313Z
-last_push_artifact = 0x36c0
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-11T18:27:35.891722Z
+last_push_artifact = 0x222d
+last_push_artifact_type = "function"
