--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,14 +10,14 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
+[0x30a0]
+last_change = 2023-12-11T18:27:35.751627Z
+addr = 0x30a0
+name = "a0x016lxRsp0x04"
+size = 0x50
+
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
-
-[0x4fc0]
-last_change = 2023-12-11T18:27:35.734341Z
-addr = 0x4fc0
-name = "__isoc99_scanf_ptr"
-size = 0x8
