--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,6 +4,12 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
+[0x1000]
+last_change = 2023-12-11T18:27:35.593868Z
+addr = 0x1000
+name = "_init"
+size = 0x1
+
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
@@ -14,10 +20,4 @@ size = 0x1f
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
-size = 0x1
-
-[0x5060]
-last_change = 2023-12-11T18:27:35.579511Z
-addr = 0x5060
-name = "sp_"
 size = 0x1
