Updated <GlobalVar: None aLib64LdLinuxX8; @792 len=28>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,8 +1,8 @@
-[0x65c]
-last_change = 2023-12-11T18:27:35.784511Z
-addr = 0x65c
-name = "aGlibc27"
-size = 0xa
+[0x318]
+last_change = 2023-12-11T18:27:35.802253Z
+addr = 0x318
+name = "aLib64LdLinuxX8"
+size = 0x1c
 
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
