Updated <GlobalVar: None aYouHaveChosenT; @13408 len=45>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,14 +10,14 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
+[0x3460]
+last_change = 2023-12-11T18:27:36.244762Z
+addr = 0x3460
+name = "aYouHaveChosenT"
+size = 0x2d
+
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
-size = 0x1
-
-[0x50b8]
-last_change = 2023-12-11T18:27:36.230421Z
-addr = 0x50b8
-name = "open"
 size = 0x1
