--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:36.580997Z
-last_push_artifact = 0x4fd0
+last_push_time = 2023-12-11T18:27:36.596593Z
+last_push_artifact = 0x4fe0
 last_push_artifact_type = "global variable"
