--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x67c]
-last_change = 2023-12-11T18:27:36.286428Z
-addr = 0x67c
-name = "aItmDeregistert"
-size = 0x1c
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -15,6 +9,12 @@ last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
+
+[0x3380]
+last_change = 2023-12-11T18:27:36.300110Z
+addr = 0x3380
+name = "aLargeInputLeng"
+size = 0x33
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
