--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:36.370364Z
-last_push_artifact = 0x5048
+last_push_time = 2023-12-11T18:27:36.384683Z
+last_push_artifact = 0x50c8
 last_push_artifact_type = "global variable"
