--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:36.829240Z
-last_push_artifact = 0x5e5
+last_push_time = 2023-12-11T18:27:36.844211Z
+last_push_artifact = 0x5040
 last_push_artifact_type = "global variable"
