--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x608]
+last_change = 2023-12-11T18:27:36.502033Z
+addr = 0x608
+name = "aErrnoLocation"
+size = 0x11
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -14,10 +20,4 @@ size = 0x1f
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
-size = 0x1
-
-[0x5098]
-last_change = 2023-12-11T18:27:36.488004Z
-addr = 0x5098
-name = "__assert_fail"
 size = 0x1
