--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x608]
-last_change = 2023-12-11T18:27:36.502033Z
-addr = 0x608
-name = "aErrnoLocation"
-size = 0x11
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -20,4 +14,10 @@ size = 0x1f
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
+size = 0x1
+
+[0x5030]
+last_change = 2023-12-11T18:27:36.516595Z
+addr = 0x5030
+name = "si_"
 size = 0x1
