--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:36.668882Z
-last_push_artifact = 0x5c0
+last_push_time = 2023-12-11T18:27:36.683055Z
+last_push_artifact = 0x5cf
 last_push_artifact_type = "global variable"
