--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,14 +10,14 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
+[0x3701]
+last_change = 2023-12-11T18:27:36.549379Z
+addr = 0x3701
+name = "aArgc0"
+size = 0x9
+
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
-
-[0x4fb8]
-last_change = 2023-12-11T18:27:36.533205Z
-addr = 0x4fb8
-name = "open_ptr"
-size = 0x8
