Updated <GlobalVar: None aPutchar; @1509 len=8>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x5e5]
+last_change = 2023-12-11T18:27:36.829240Z
+addr = 0x5e5
+name = "aPutchar"
+size = 0x8
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -14,10 +20,4 @@ size = 0x1f
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
-size = 0x1
-
-[0x4d70]
-last_change = 2023-12-11T18:27:36.814784Z
-addr = 0x4d70
-name = "_DYNAMIC"
 size = 0x1
