--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,17 +4,17 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x1260]
-last_change = 2023-12-11T18:27:36.398713Z
-addr = 0x1260
-name = "__do_global_dtors_aux"
-size = 0x1
-
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
+
+[0x3170]
+last_change = 2023-12-11T18:27:36.413432Z
+addr = 0x3170
+name = "aOurStackPointe"
+size = 0x44
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
