--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,8 +1,8 @@
-[0x619]
-last_change = 2023-12-11T18:27:36.429158Z
-addr = 0x619
-name = "aRead"
-size = 0x5
+[0x61e]
+last_change = 2023-12-11T18:27:36.443622Z
+addr = 0x61e
+name = "aStdout"
+size = 0x7
 
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
