--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:36.429158Z
-last_push_artifact = 0x619
+last_push_time = 2023-12-11T18:27:36.443622Z
+last_push_artifact = 0x61e
 last_push_artifact_type = "global variable"
