--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,14 +10,14 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
-[0x2828]
-last_change = 2023-12-11T18:27:36.710388Z
-addr = 0x2828
-name = ".term_proc"
-size = 0x1
-
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
+size = 0x1
+
+[0x5078]
+last_change = 2023-12-11T18:27:36.724291Z
+addr = 0x5078
+name = "__errno_location"
 size = 0x1
