--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:35.985607Z
-last_push_artifact = 0x50b0
+last_push_time = 2023-12-11T18:27:36.001689Z
+last_push_artifact = 0x4f68
 last_push_artifact_type = "global variable"
