Updated <GlobalVar: None completed.8060; @20520 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -16,8 +16,8 @@ addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
 
-[0x50a0]
-last_change = 2023-12-11T18:27:36.626267Z
-addr = 0x50a0
-name = "read"
+[0x5028]
+last_change = 2023-12-11T18:27:36.640813Z
+addr = 0x5028
+name = "completed.8060"
 size = 0x1
