--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x5bb]
-last_change = 2023-12-11T18:27:36.738718Z
-addr = 0x5bb
-name = "aExit"
-size = 0x5
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -20,4 +14,10 @@ size = 0x1f
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
+size = 0x1
+
+[0x4d60]
+last_change = 2023-12-11T18:27:36.753997Z
+addr = 0x4d60
+name = "__frame_dummy_init_array_entry"
 size = 0x1
