--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:36.640813Z
-last_push_artifact = 0x5028
+last_push_time = 2023-12-11T18:27:36.654961Z
+last_push_artifact = 0x4f90
 last_push_artifact_type = "global variable"
