--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x344]
-last_change = 2023-12-11T18:27:36.769159Z
-addr = 0x344
-name = "aGnu"
-size = 0x4
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -20,4 +14,10 @@ size = 0x1f
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
+size = 0x1
+
+[0x50a8]
+last_change = 2023-12-11T18:27:36.786287Z
+addr = 0x50a8
+name = "__libc_start_main"
 size = 0x1
