--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:36.769159Z
-last_push_artifact = 0x344
+last_push_time = 2023-12-11T18:27:36.786287Z
+last_push_artifact = 0x50a8
 last_push_artifact_type = "global variable"
