--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:36.724291Z
-last_push_artifact = 0x5078
+last_push_time = 2023-12-11T18:27:36.738718Z
+last_push_artifact = 0x5bb
 last_push_artifact_type = "global variable"
