Updated <GlobalVar: None open_ptr; @20408 len=8>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -16,8 +16,8 @@ addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
 
-[0x5030]
-last_change = 2023-12-11T18:27:36.516595Z
-addr = 0x5030
-name = "si_"
-size = 0x1
+[0x4fb8]
+last_change = 2023-12-11T18:27:36.533205Z
+addr = 0x4fb8
+name = "open_ptr"
+size = 0x8
