Updated <GlobalVar: None aItmDeregistert; @1660 len=28>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:36.272295Z
-last_push_artifact = 0x3449
+last_push_time = 2023-12-11T18:27:36.286428Z
+last_push_artifact = 0x67c
 last_push_artifact_type = "global variable"
