Updated <GlobalVar: None elf_gnu_hash_nbuckets; @928 len=4>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x3a0]
+last_change = 2023-12-11T18:27:37.187199Z
+addr = 0x3a0
+name = "elf_gnu_hash_nbuckets"
+size = 0x4
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -14,10 +20,4 @@ size = 0x1f
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
-size = 0x1
-
-[0x5008]
-last_change = 2023-12-11T18:27:37.173518Z
-addr = 0x5008
-name = "__dso_handle"
 size = 0x1
