Updated <GlobalVar: None __do_global_dtors_aux_fini_array_entry; @19816 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,14 +10,14 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
-[0x269d]
-last_change = 2023-12-11T18:27:37.101426Z
-addr = 0x269d
-name = "main"
-size = 0x1
-
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
+size = 0x1
+
+[0x4d68]
+last_change = 2023-12-11T18:27:37.116406Z
+addr = 0x4d68
+name = "__do_global_dtors_aux_fini_array_entry"
 size = 0x1
