--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:37.101426Z
-last_push_artifact = 0x269d
+last_push_time = 2023-12-11T18:27:37.116406Z
+last_push_artifact = 0x4d68
 last_push_artifact_type = "global variable"
