--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:37.596481Z
-last_push_artifact = 0x31b8
+last_push_time = 2023-12-11T18:27:37.610340Z
+last_push_artifact = 0x3128
 last_push_artifact_type = "global variable"
