--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:37.756813Z
-last_push_artifact = 0x5d4
+last_push_time = 2023-12-11T18:27:37.773018Z
+last_push_artifact = 0x364
 last_push_artifact_type = "global variable"
