--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:37.041954Z
-last_push_artifact = 0x1140
+last_push_time = 2023-12-11T18:27:37.058317Z
+last_push_artifact = 0x27b0
 last_push_artifact_type = "global variable"
