Updated <GlobalVar: None _ITM_registerTMCloneTable_ptr; @20464 len=8>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,14 +10,14 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
-[0x36f9]
-last_change = 2023-12-11T18:27:37.669216Z
-addr = 0x36f9
-name = "aStdin_0"
-size = 0x8
-
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
+
+[0x4ff0]
+last_change = 2023-12-11T18:27:37.683436Z
+addr = 0x4ff0
+name = "_ITM_registerTMCloneTable_ptr"
+size = 0x8
