--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:37.669216Z
-last_push_artifact = 0x36f9
+last_push_time = 2023-12-11T18:27:37.683436Z
+last_push_artifact = 0x4ff0
 last_push_artifact_type = "global variable"
